# Ubiquitous

./: .gitignore  README.md  Team 7 COSC.pptx  grades.txt
BaselineProject/BaselineGroup7/: books.txt  students.txt
Exercise1Group7/Exercise1Group7/: AppDelegate.h  AppDelegate.m  Info.plist  QuizManager.h  QuizManager.m  QuizObject.h  QuizObject.m  ViewController.h  ViewController.m  main.m
Exercise1Group7/Exercise1Group7.xcodeproj/: project.pbxproj
Exercise1Group7/Exercise1Group7Tests/: Exercise1Group7Tests.m  Info.plist
Exercise3Group7/: NSString+StringVerification.h
Exercise3Group7/Exercise3Group7/: AppDelegate.h  AppDelegate.m  Header.h  Info.plist  LoggedInViewController.h  LoggedInViewController.m  NSString+StringVerification.h  NSString+StringVerification.m  User.h  User.m  ViewController.h  ViewController.m  main.m
Exercise3Group7/Exercise3Group7.xcodeproj/: project.pbxproj
Exercise3Group7/Exercise3Group7Tests/: Exercise3Group7Tests.m  Info.plist
Exercise4Group7/Exercise4Group7/: User.m  UserTableViewCell.h  UserTableViewController.h  UserTableViewController.m  ViewController.m
Exercise4Group7/Exercise4Group7.xcodeproj/: project.pbxproj
Exercise5Group7/Exercise5Group7/: AppDelegate.h  AppDelegate.m  MapViewController.h  MapViewController.m  User.h  UserTableViewCell.m  UserTableViewController.h  UserTableViewController.m  ViewController.h  ViewController.m  main.m
Exercise5Group7/Exercise5Group7.xcodeproj/: project.pbxproj
Exercise5Group7/Exercise5Group7Tests/: Exercise5Group7Tests.m
Exercise6Group7/Exercise6Group7/: AppDelegate.h  AppDelegate.m  GameOverScene.h  GameOverScene.m  GameScene.h  GameScene.m  GameViewController.h  GameViewController.m  main.m
Exercise6Group7/Exercise6Group7.xcodeproj/: project.pbxproj
Exercise6Group7/Exercise6Group7Tests/: Exercise6Group7Tests.m
Exercise7Group7/Exercise7Group7/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
Exercise7Group7/Exercise7Group7.xcodeproj/: project.pbxproj
Exercise8Group7/Exercise8Group7 WatchKit App/: Info.plist
PA1Group7/PA1Group7/: Car.h  (+12 more)
ShareThought/: Podfile  Team 7 COSC.pptx
ShareThought/Server/: CMakeLists.txt  CompileForOSX.sh  revision.h.in.cmake  server.cpp
ShareThought/Server/cmake/: genrev.cmake  options.cmake  showoptions.cmake
ShareThought/Server/cmake/compiler/clang/: settings.cmake
ShareThought/Server/cmake/compiler/gcc/: settings.cmake
ShareThought/Server/cmake/compiler/msvc/: settings.cmake
ShareThought/Server/cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  ConfigureBoost.cmake  FindGit.cmake
ShareThought/Server/cmake/platform/unix/: settings.cmake
ShareThought/Server/cmake/platform/win/: settings.cmake
ShareThought/Server/dep/: CMakeLists.txt
ShareThought/Server/src/: CMakeLists.txt
ShareThought/Server/src/genrev/: CMakeLists.txt
ShareThought/Server/src/sharethoughtserver/: Account.h  CMakeLists.txt  Common.h  Config.h  Packet.h  SQLConnectionManager.h  Server.cpp  User.h  account.h  config.h  packet.h  server.cpp  sqlConnectionManager.cpp  sqlConnectionManager.h  timer.h  user.h
ShareThought/Server/src/sharethoughtserver/PrecompiledHeaders/: serverPCH.cpp
(+150 files in other folders)
